# Ride_router

./: .env  .gitignore  cloud.py  create_superuser.py  main.py  requirements.txt
Backend/: .env  .gitignore  Dockerfile  README.md  create_superuser.py  docker-compose.yml  generate_secret_key.py  init_database.py  init_db.py  main.py  pyproject.toml  setup_database.py
Backend/app/: __init__.py  auth.py  create_superuser.py  init_db.py  route_optimizer.py  schemas.py  security.py
Backend/app/core/: config.py  email.py  sms.py
Backend/data/: main.py
data/Local/Temp/Outlook Logging/: EXCEL_16_0_18730_20142-20250510T2204310034-16224.etl
misc/: first.py  pso_test.py  seo.py
router/: next.config.js  package-lock.json  package.json  tailwind.config.ts
router/src/: middleware.ts
router/src/app/: globals.css  layout.tsx  page.tsx
router/src/app/dashboard/: page.tsx
router/src/app/login/: page.tsx
router/src/app/register/: page.tsx
router/src/app/verify/: page.tsx
router/src/components/auth/: ProtectedRoute.tsx
router/src/lib/: api.ts
router/src/pages/api/auth/: [...nextauth].ts
router/src/types/: react-icons.d.ts
src/: api.py  auth.py  create_superuser.py  database.py  models.py  schemas.py  security.py
streamlit/: main.py
